[package]
name = "circuit-rpc-tests"
version = "4.0.0"
authors = ["t3rn Ltd."]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://t3rn.io"
repository = "https://github.com/t3rn/t3rn/"
description = "Circuit RPC Tests"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
# custom
relay-substrate-client = { path = "../relayers/client-substrate" ,version = "0.1.0" }
jsonrpc-runtime-client = { path = "../relayers/jsonrpc-runtime-client" }
circuit-parachain-runtime = {path = "../runtime/parachain" }
pallet-circuit-portal = {version = "1.0.0-alpha.0", path = "../pallets/circuit-portal" }
#volatile-vm = { path = "../../vm/volatile-vm", default-features = false }
t3rn-primitives = { path = "../primitives", version = "1.0.0-alpha.0", default-features = false }
t3rn-protocol = { version = "1.0.0-alpha.1", path = "../protocol", default-features = false }

# substrate
jsonrpc-core-client = { version = "15.1.0", features = ["http"] }
jsonrpsee-types = "0.2.0"
jsonrpc-pubsub = "18.0.0"
jsonrpc-core = { version = "18.0.0" }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
frame-metadata = { version = "14.0.0", features = ["v13", "v14"], default-features = false }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.13' }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-utils = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-state-machine = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.13' }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
substrate-test-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
node-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
codec = { package = "parity-scale-codec", version = "2.0.0" , default-features = false, features = ["derive"]}

# crates.io
async-std = { version = "1.6.5", features = ["attributes", "tokio1"] }
async-trait = "0.1.40"
hex-literal = "0.3.1"
hex = "0.4.0"
log = "0.4.8"
env_logger = "0.8.2"
futures = { version = "0.3.16",features = ["compat"] }
tempfile = "3.1.0"
assert_matches = "1.3.0"
futures01 = { package = "futures", version = "0.1.29" }
lazy_static = "1.4.0"
wat = "1"
tokio = "0.1.22"
hash-db = { version = "0.15.2" }
parking_lot = "0.11.1"
serde_json = "1.0.41"
