[package]
authors     = [ "t3rn Ltd." ]
description = "Circuit RPC Tests"
edition     = { workspace = true }
homepage    = { workspace = true }
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "circuit-rpc-tests"
readme      = { workspace = true }
repository  = { workspace = true }
version     = "4.0.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dev-dependencies]
async-std              = { version = "1.6.5", features = [ "attributes", "tokio1" ] }
async-trait            = "0.1.40"
jsonrpc-core-client    = { workspace = true, features = [ "http" ] }
jsonrpc-runtime-client = { version = "0.1.0", path = "../relayers/jsonrpc-runtime-client" }
jsonrpsee-types        = "0.2.0"
relay-substrate-client = { version = "0.1.0", path = "../relayers/client-substrate" }

codec           = { workspace = true, package = "parity-scale-codec", default-features = true }
futures         = { version = "0.3.16", features = [ "compat" ] }
node-primitives = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-client-api   = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-rpc          = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-rpc-api      = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-api          = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }

hex            = "0.4.0"
hex-literal    = "0.3.1"
jsonrpc-core   = { version = "15.1.0" }
jsonrpc-pubsub = "15.1.0"

env_logger = "0.8.2"
log        = "0.4.8"

hash-db               = { version = "0.15.2" }
parking_lot           = "0.11.1"
sc-block-builder      = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-chain-spec         = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-executor           = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-keystore           = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-tracing            = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-utils              = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
serde_json            = "1.0.41"
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.13' }
sp-blockchain         = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-core               = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-keyring            = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-keystore           = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-offchain           = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-rpc                = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-runtime            = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-session            = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-state-machine      = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-tracing            = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-transaction-pool   = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-version            = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
t3rn-primitives       = { path = "../primitives" }

tempfile = "3.1.0"

assert_matches                = "1.3.0"
circuit-test-utils            = { version = "0.1.0", path = "../test-utils" }
frame-system                  = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
futures01                     = { package = "futures", version = "0.1.29" }
lazy_static                   = "1.4.0"
pallet-circuit-portal         = { version = "1.0.0-alpha.0", path = "../pallets/circuit-portal" }
sc-network                    = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-io                         = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
substrate-test-runtime        = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
substrate-test-runtime-client = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }

circuit-standalone-runtime = { path = "../runtime/standalone" }
sc-cli                     = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-transaction-pool        = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
tokio                      = "0.1.22"
wat                        = "1"
