[package]
edition = { workspace = true }
name    = "circuit-test-utils"
version = { workspace = true }

[dependencies]
circuit-mock-runtime    = { path = "../runtime/mock" }
circuit-runtime-pallets = { path = "../runtime/common-pallets" }
circuit-runtime-types   = { default-features = false, path = "../runtime/common-types" }

codec                   = { workspace = true, package = "parity-scale-codec" }
frame-metadata          = { workspace = true }
hex-literal             = { workspace = true }
hex                     = { workspace = true }
serde                   = { workspace = true }
serde_json              = { workspace = true }

jsonrpsee-types         = "0.2.0"

pallet-circuit-portal   = { path = "../pallets/circuit-portal" }
relay-substrate-client  = { path = "../relayers/client-substrate" }

sp-core    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.13' }
sp-std     = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.13' }
sp-version = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.13' }

t3rn-primitives         = { default-features = false, path = "../primitives" }
t3rn-types              = { default-features = false, path = "../types" }
