[package]
authors     = [ "t3rn ltd. <team@t3rn.io>" ]
description = "A crate that hosts a common definitions that are relevant for t3rn components."
edition     = "2021"
homepage    = "https://t3rn.io"
license     = "Apache-2.0"
name        = "t3rn-types"
repository  = "https://github.com/t3rn/t3rn/"
version     = "1.0.0-alpha.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes      = { version = "1.2.1", default-features = false }
codec      = { package = "parity-scale-codec", version = "3", default-features = false, features = [ "derive" ] }
num        = { version = "0.4.0", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = [ "derive" ] }
serde      = { default-features = false, version = "1.0", optional = true, features = [ "derive" ] }

primitive-types = { version = "0.11.1", default-features = false, features = [ "scale-info" ] }
sp-core         = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.27', default-features = false, optional = true }
sp-io           = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.27', default-features = false, optional = true }
sp-runtime      = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.27', default-features = false, optional = true }

[dev-dependencies]
hex         = "0.4"
hex-literal = { version = '0.3.1' }
serde_json  = "1.0.41"

sp-core    = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.27' }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.27' }

t3rn-sdk-primitives = { version = "=0.1.1-rc.4" }

[features]
default     = [ "std" ]
runtime     = [ "sp-runtime", "sp-core", "sp-io" ]
runtime-std = [ "sp-runtime/std", "sp-core/std", "sp-io/std" ]
std         = [ "codec/std", "scale-info/std", "serde/std",  "bytes/std", "sp-core/std", "sp-runtime/std" ]
