[package]
authors     = [ "t3rn ltd. <team@t3rn.io>" ]
description = "A crate that hosts a common definitions that are relevant for t3rn components."
edition     = "2021"
homepage    = "https://t3rn.io"
license     = "Apache-2.0"
name        = "t3rn-types"
repository  = "https://github.com/t3rn/t3rn/"
version     = "1.5.0-rc.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes      = { version = "1.2.1", default-features = false }
codec      = { package = "parity-scale-codec", version = "3", default-features = false, features = [ "derive" ] }
num        = { version = "0.4.1", default-features = false }
num-traits = { version = "0.2", default-features = false }
scale-info = { version = "2.9.0", default-features = false, features = [ "derive" ] }
serde      = { default-features = false, version = "1.0", optional = true, features = [ "derive" ] }

primitive-types = { version = "0.12.1", default-features = false, features = [ "scale-info" ] }
sp-core         = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false, optional = true }
sp-io           = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false, optional = true }
sp-runtime      = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false, optional = true }
sp-std          = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false, optional = true }

frame-system = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false, optional = true }

t3rn-abi = { path = "../types/abi", default-features = false, features = [ "runtime" ], optional = true }

[dev-dependencies]
hex         = "0.4"
hex-literal = "0.4.1"
serde_json  = "1.0.103"
sp-core     = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27' }
sp-runtime  = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27' }

circuit-runtime-types = { path = "../runtime/common-types" }
t3rn-sdk-primitives   = { version = "=0.1.1-rc.5" }

[features]
default     = [ "std" ]
runtime     = [ "sp-runtime", "sp-std", "sp-core", "sp-io", "frame-system", "t3rn-abi" ]
runtime-std = [ "sp-runtime/std", "sp-core/std", "sp-io/std", "frame-system/std", "t3rn-abi/std" ]
std         = [ "t3rn-abi/std", "sp-std/std", "sp-runtime/std", "frame-system/std", "sp-core/std", "codec/std", "scale-info/std", "serde/std", "bytes/std", "num-traits/std" ]
