[package]
authors     = { workspace = true }
description = "A crate that hosts a common definitions that are relevant for t3rn components."
edition     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
name        = "t3rn-types"
repository  = { workspace = true }
version     = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes           = { workspace = true }
codec           = { workspace = true, package = "parity-scale-codec" }
frame-system    = { workspace = true, optional = true }
num             = { workspace = true }
num-traits      = { workspace = true }
primitive-types = { workspace = true }
scale-info      = { workspace = true }
serde           = { workspace = true, optional = true }
sp-core         = { workspace = true, optional = true }
sp-io           = { workspace = true, optional = true }
sp-runtime      = { workspace = true, optional = true }
sp-std          = { workspace = true, optional = true }
t3rn-abi        = { path = "../types/abi", default-features = false, features = [ "runtime" ], optional = true }

[dev-dependencies]
hex         = "0.4"
hex-literal = "0.4.1"
serde_json  = "1.0.41"
sp-core     = { workspace = true }
sp-runtime  = { workspace = true }

circuit-runtime-types = { path = "../runtime/common-types" }
t3rn-sdk-primitives   = { workspace = true }

rlp-derive = "0.1.0"

[features]
default     = [ "std" ]
runtime     = [ "sp-runtime", "sp-std", "sp-core", "sp-io", "frame-system", "t3rn-abi" ]
runtime-std = [ "sp-runtime/std", "sp-core/std", "sp-io/std", "frame-system/std", "t3rn-abi/std" ]
std         = [ "t3rn-abi/std", "sp-std/std", "sp-runtime/std", "frame-system/std", "sp-core/std", "codec/std", "scale-info/std", "serde/std", "bytes/std", "num-traits/std" ]