[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "beefy-node"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "2.0.0"

[[bin]]
name = "beefy-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }

[dependencies]
jsonrpc-core = "15.0.0"
structopt = "0.3.22"

# local dependencies
beefy-primitives = { git = "https://github.com/t3rn/grandpa-bridge-gadget", default-features = false, branch = "polkadot-v0.9.9"}
beefy-gadget = { git = "https://github.com/t3rn/grandpa-bridge-gadget", default-features = false, branch = "polkadot-v0.9.9"}
beefy-gadget-rpc = { git = "https://github.com/t3rn/grandpa-bridge-gadget", default-features = false, branch = "polkadot-v0.9.9"}
beefy-node-runtime = { path = "../runtime", version = "2.0.0" }
pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.9' }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }

sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-cli = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "polkadot-v0.9.9" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "polkadot-v0.9.9" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "polkadot-v0.9.9" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }

[features]
default = []
runtime-benchmarks = []
