[package]
name = "circuit"
description = "Circuit node"
version = "0.1.0"
authors = ["MaciejBaj <maciej@maciejbaj.com>"]
edition = "2018"
homepage = "https://t3rn.io"
license = "Apache 2.0"
repository = "https://github.com/t3rn/t3rn/"

[dependencies]
jsonrpc-core = "15.1.0"
structopt = "0.3.21"
serde_json = "1.0.59"
async-std = "1.10.0"

# Bridge dependencies

bp-messages = { path = "../../bridges/primitives/messages" }
bp-circuit = { path = "../../bridges/primitives/chain-circuit" }
bp-runtime = { path = "../../bridges/primitives/runtime" }
pallet-bridge-messages = { path = "../../bridges/modules/messages" }

#VM dependencies

pallet-evm = { path = "../../../frontier/frame/evm" }

# Substrate Dependencies

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
node-inspect = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10', features = ["wasmtime"] }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sc-service = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sp-core = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }

circuit-runtime = { path = "../runtime" }
pallet-xdns = { path = "../pallets/xdns" }
t3rn-primitives = { path = "../primitives" }
jsonrpc-runtime-client = { path = "../rpc/rpc-test/jsonrpc-runtime-client" }

beefy-primitives = { git = "https://github.com/t3rn/grandpa-bridge-gadget", branch = 'polkadot-v0.9.10', default-features = false }
beefy-gadget = { git = "https://github.com/t3rn/grandpa-bridge-gadget", branch = 'polkadot-v0.9.10', default-features = false }
beefy-gadget-rpc = { git = "https://github.com/t3rn/grandpa-bridge-gadget", branch = 'polkadot-v0.9.10', default-features = false }


[build-dependencies]
substrate-build-script-utils = "3.0.0"
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }

[features]
default = []

# TODO: https://github.com/paritytech/parity-bridges-common/issues/390
# I've left the feature flag here to test our CI configuration
runtime-benchmarks = [
    "circuit-runtime/runtime-benchmarks",
    # "millau-runtime/runtime-benchmarks",
]
